--- a/app/templates/contrat_detail.html
+++ b/app/templates/contrat_detail.html
@@ -78,7 +78,7 @@
                                 </tr>
                             </thead>
                             <tbody>
-                                {% for event in events %}
+                                {% for event in events|sort(attribute='dateEvenement', reverse=True) %}
                                 <tr>
                                     <td class="align-middle">{{ event['id'] }}</td>
                                     <td class="align-middle">{{ event['dateEvenement'] }}</td>
@@ -123,7 +123,7 @@
                             </thead>
                             <!-- Corps -->
                             <tbody>
-                                {% for document in documents %}
+                                {% for document in documents|sort(attribute='dateDocument', reverse=True) %}
                                 <tr>
                                     <td class="align-middle">{{ document['id'] }}</td>
                                     <td class="align-middle">{{ document['Type'] }}</td>
